se corrigio leyenda de error

--- a/uade-24-abril-2020/ejercicio2.html
+++ b/uade-24-abril-2020/ejercicio2.html
@@ -14,11 +14,11 @@
         <p class="formError">Complete todos los campos marcados con * para poder continuar!</p>
         <form action="">
             <label>Nombre * 
-                <input type="text" name="nombre" placeholder="Ingresa tu nombre"><br><p id="nombre_ayuda" class="notValid" required>Debe contener como minimo 2 caracter y maximo 30.</p>
+                <input type="text" name="nombre" placeholder="Ingresa tu nombre"><br><p id="nombre_ayuda" class="notValid" required>Debe contener como minimo 2 caracteres y maximo 30.</p>
             </label>
             <br/>
             <label>Apellido * 
-                <input type="text" name="apellido" placeholder="Ingresa tu apellido"><br><p id="apellido_ayuda" class="notValid" required>Debe contener como minimo 2 caracter y maximo 30.</p>
+                <input type="text" name="apellido" placeholder="Ingresa tu apellido"><br><p id="apellido_ayuda" class="notValid" required>Debe contener como minimo 2 caracteres y maximo 30.</p>
             </label>
             <br/>
             <label>Mail * 
