mejoras en calculadora

--- a/uade-29-abril-2020/ejercitacion_calculadora/index.html
+++ b/uade-29-abril-2020/ejercitacion_calculadora/index.html
@@ -25,7 +25,7 @@
                             <h2 class="tecla-operacion-2 parentesis-izq">(</h2>
                         </div>-->
                         <div class="col-2">
-                            <h2 class="tecla-operacion-2 atras">⟵</h2>
+                            <h2 class="tecla-operacion-2 atras">B</h2>
                         </div>
                         <!--<div class="col-2">
                             <h2 class="tecla-operacion-2 parentesis-der">)</h2>
@@ -34,7 +34,7 @@
                             <h2 class="tecla-operacion-2 reiniciar">R</h2>
                         </div>
                         <div class="col-2">
-                            <h2 class="tecla-operacion-2 guardar">◉</h2>
+                            <h2 class="tecla-operacion-2 guardar">S</h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -54,7 +54,7 @@
                             <h2 class="tecla-numerica nueve">9</h2>
                         </div>
                         <div class="col-2">
-                            <h2 class="tecla-operacion dividir">÷</h2>
+                            <h2 class="tecla-operacion dividir">/</h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -74,7 +74,7 @@
                             <h2 class="tecla-numerica seis">6</h2>
                         </div>
                         <div class="col-2">
-                            <h2 class="tecla-operacion multiplicar">•</h2>
+                            <h2 class="tecla-operacion multiplicar">*</h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -94,7 +94,7 @@
                             <h2 class="tecla-numerica tres">3</h2>
                         </div>
                         <div class="col-2">
-                            <h2 class="tecla-operacion restar">–</h2>
+                            <h2 class="tecla-operacion restar">-</h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
