añadido de botones muletos en calculadora

--- a/uade-29-abril-2020/ejercitacion_calculadora/index.html
+++ b/uade-29-abril-2020/ejercitacion_calculadora/index.html
@@ -20,21 +20,25 @@
                         </div> 
                         <div class="col-2">
                             <h2 class="tecla-operacion-2 borrar">C</h2>
+                            <h2 class="tecla-muleto-borrar"></h2>
                         </div>
                         <!--<div class="col-2">
                             <h2 class="tecla-operacion-2 parentesis-izq">(</h2>
                         </div>-->
                         <div class="col-2">
                             <h2 class="tecla-operacion-2 atras">B</h2>
+                            <h2 class="tecla-muleto-atras"></h2>
                         </div>
                         <!--<div class="col-2">
                             <h2 class="tecla-operacion-2 parentesis-der">)</h2>
                         </div>-->
                         <div class="col-2">
                             <h2 class="tecla-operacion-2 reiniciar">R</h2>
+                            <h2 class="tecla-muleto-reiniciar"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-operacion-2 guardar">S</h2>
+                            <h2 class="tecla-muleto-guardar"></h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -46,15 +50,19 @@
                         </div> 
                         <div class="col-2">
                             <h2 class="tecla-numerica siete">7</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica ocho">8</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica nueve">9</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-operacion dividir">/</h2>
+                            <h2 class="tecla-muleto-operacion"></h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -66,15 +74,19 @@
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica cuatro">4</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica cinco">5</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica seis">6</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-operacion multiplicar">*</h2>
+                            <h2 class="tecla-muleto-operacion"></h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -86,15 +98,19 @@
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica uno">1</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica dos">2</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica tres">3</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-operacion restar">-</h2>
+                            <h2 class="tecla-muleto-operacion"></h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
@@ -106,15 +122,19 @@
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica cero">0</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-numerica coma">.</h2>
+                            <h2 class="tecla-muleto-numerica"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-operacion-igual igual">=</h2>
+                            <h2 class="tecla-muleto-igual"></h2>
                         </div>
                         <div class="col-2">
                             <h2 class="tecla-operacion sumar">+</h2>
+                            <h2 class="tecla-muleto-operacion"></h2>
                         </div>
                         <div class="col-2">
                             <h2></h2>
