nuevas features en tateti

--- a/uade-15-mayo-2020/ejercicio_tateti/index.html
+++ b/uade-15-mayo-2020/ejercicio_tateti/index.html
@@ -12,7 +12,7 @@
         <div class="offset-3 col-6">
           <div class="row">
             <div class="col-12 columna-turno">
-              <p>Es el turno de: <span id="turno">×</span></p>
+              <p>Es el turno de: <span id="turno"></span></p>
             </div>
           </div>
           <div class="row container-tateti">
@@ -39,6 +39,14 @@
 
 
         <!-- ◯× -->
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="panel-boton">
+            <h1 class="panel-ganador"></h1>
+            <button type="button" class="boton-reinicio btn-dark">Reiniciar juego</button>
+          </div>
+        </div>
       </div>
     </div>
     <script
