ejercicio de primos

--- a/uade-15-mayo-2020/ejercitacion_primos/index.html
+++ b/uade-15-mayo-2020/ejercitacion_primos/index.html
@@ -10,7 +10,48 @@
         <div class="table">
             <div class="cell">
                 <div class="content">
-                    hola
+                    <div class="container">
+                        <div class="row">
+                            <div class="offset-3 col-6">
+                                <div class="row">
+                                    <div class="cuadro">
+                                        <div class="col-12 titulo">
+                                            <button type="button" class="btn btn-danger boton-titulo">Prime Number Calculator</button>
+                                        </div>
+                                        <div class="col-12">
+                                            <p>Is this Number Prime or Composite?</p>
+                                        </div>
+                                        <div class="col-12">
+                                            <form>
+                                                <div class="form-group">
+                                                    <input type="number" class="form-control input-numero-primo" placeholder="">
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="row panel-botones">
+                                                <div class="col-3 boton-clear">
+                                                    <button type="button" class="btn btn-default">clear</button> 
+                                                </div>
+                                                <div class="col-6 espacion-entre-botones">
+                                                </div>
+                                                <div class="col-3 boton-calculate">
+                                                    <button type="button" class="btn btn-default">calculate</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="area-respuesta">
+                                                Answer:
+                                                <div class="respuesta">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
                 </div>
             </div>
         </div>
