--- a/uade-01-julio-2020/index.html
+++ b/uade-01-julio-2020/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <title></title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/estilo_primos.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <div class="table">
             <div class="cell">
                 <div class="content">
-                    hola
+                    <p class="email"></p>
+                    <button class="btn btn-warning">Obtener data</button>
                 </div>
             </div>
         </div>
@@ -18,6 +19,38 @@
             src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
-        <script type="text/javascript" src="./js/primos.js"></script>
+        <script 
+            type="text/javascript" 
+            src="./js/main.js"></script>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+            crossorigin="anonymous"></script>
+        <script 
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+            crossorigin="anonymous"></script>
+        <script>
+            $("button").click(function(){
+                $.ajax({
+                        url: "http://api.currencylayer.com/live?access_key=634738f605b4a7bce267a2c5475a4876",
+                        type: 'GET',
+                        dataType: 'json',
+                        success: (result) => {
+                            $(".email").text(result.quotes.USDARS);
+                            //$("#email").val(result.results[0].email);
+                            //$("#password").val(result.results[0].login.password);
+                            //$("#ciudad").val(result.results[0].location.city);
+                            //$(".rounded").attr('src', result.results[0].picture.thumbnail);
+                            //$(".rounded").removeClass('hidden');
+                            //console.log(result.results[0]);
+                            //document.title = result.results[0].name.first+" "+result.results[0].name.last;
+                        }, 
+                        error: function() {
+                            console.log("An error has occured");
+                        }
+                    });
+            });
+        </script>
     </body>
 </html>
