se añadieron max y min

--- a/uade-01-julio-2020/index.html
+++ b/uade-01-julio-2020/index.html
@@ -28,7 +28,12 @@
                             <div class="cotizacionBlue cotizacion btn btn-info hidden"><p></p></div>
                             <div class="cotizacionCcl cotizacion btn btn-info hidden"><p></p></div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-1">
+                            <div class="leyendaVariacion btn btn-info hidden"><p></p></div>
+                            <div class="leyendaMaximo leyenda2 btn btn-info hidden"><p></p></div>
+                            <div class="leyendaMinimo leyenda2 btn btn-info hidden"><p></p></div>
+                        </div>
+                        <div class="col-3">
                         </div>
                     </div>
                     <div class="row">
