--- a/uade-01-julio-2020/index.html
+++ b/uade-01-julio-2020/index.html
@@ -11,8 +11,9 @@
         <div class="table">
             <div class="cell">
                 <div class="content-fluid">
-                    <div class="row">
-                        <div class="col-4">
+                    <div class="row align-items-center">
+                        <div class="col-6">
+                            <canvas class="chart hidden"></canvas>
                         </div>
                         <div class="col-2">
                             <div class="leyendaOficial leyenda btn btn-info hidden"><p></p></div>
@@ -33,20 +34,23 @@
                             <div class="leyendaMaximo leyenda2 btn btn-info hidden"><p></p></div>
                             <div class="leyendaMinimo leyenda2 btn btn-info hidden"><p></p></div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-1">
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-12">
                             <div class="fechaCotizacion btn btn-dark hidden"><p></p></div>
                         </div>
+                    </div>
+                    <div class="row align-items-center">
                         <div class="col-12">
+                            <button class="btn historico btn-info">Consultar Histórico</button>
                             <button class="btn consulta btn-warning">Consultar Cotización</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
         <script
             src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
