added dolar mayorista

--- a/uade-01-julio-2020/index.html
+++ b/uade-01-julio-2020/index.html
@@ -16,6 +16,7 @@
                             <canvas class="chart hidden"></canvas>
                         </div>
                         <div class="col-2">
+                            <div class="leyendaMayorista leyenda btn btn-info hidden"><p></p></div>
                             <div class="leyendaOficial leyenda btn btn-info hidden"><p></p></div>
                             <div class="leyendaSolidario leyenda btn btn-info hidden"><p></p></div>
                             <div class="leyendaAgro leyenda btn btn-info hidden"><p></p></div>
@@ -23,6 +24,7 @@
                             <div class="leyendaCcl leyenda btn btn-info hidden"><p></p></div>
                         </div>
                         <div class="col-2">
+                            <div class="cotizacionMayorista cotizacion btn btn-info hidden"><p></p></div>
                             <div class="cotizacionOficial cotizacion btn btn-info hidden"><p></p></div>
                             <div class="cotizacionSolidario cotizacion btn btn-info hidden"><p></p></div>
                             <div class="cotizacionAgro cotizacion btn btn-info hidden"><p></p></div>
